objects/NetworkAdoptionProduct__c.object
<CustomObject>
    <fields>
        <fullName>AdoptionLen__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Adoption Length (Mth)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdoptionPct__c</fullName>
        <label>Adoption %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ApexUpdate__c</fullName>
        <label>Apex Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyValue__c</fullName>
        <label>Monthly Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enhanced SEO</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Facebook Setup</fullName>
                </value>
                <value>
                    <fullName>Foundations</fullName>
                </value>
                <value>
                    <fullName>Location Setup</fullName>
                </value>
                <value>
                    <fullName>Paid Per Click (PPC)</fullName>
                </value>
                <value>
                    <fullName>Reviews</fullName>
                </value>
                <value>
                    <fullName>Yodle Web</fullName>
                </value>
                <value>
                    <fullName>Media Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Qty / Loc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalValue__c</fullName>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Network Adoption Products</relationshipLabel>
        <relationshipName>Network_Adoption_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Network Adoption Product</label>
    <nameField>
        <displayFormat>NAP-{0000000}</displayFormat>
        <label>NAP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Adoption Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AdoptionLen_Greater_Than_0</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(AdoptionLen__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>AdoptionLen__c</errorDisplayField>
        <errorMessage>Must be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AdoptionPct_Between_0_100</fullName>
        <active>false</active>
        <description>Must be between 0 and 100</description>
        <errorConditionFormula>OR(
  AdoptionPct__c = 0,
  AdoptionPct__c &gt; 1
)</errorConditionFormula>
        <errorDisplayField>AdoptionPct__c</errorDisplayField>
        <errorMessage>Must be between 0 and 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_Greater_Than_Zero</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Quantity__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>